# code-dogfood-7.1

./: README.md  com.github.jeremypw.dogfood-code-7.yml  com.github.jeremypw.dogfood-code-flatpak-7.yml  io.elementary.code.yml  meson.build  meson_options.txt
.github/workflows/: ci.yml
data/: code.metainfo.xml.in  code.policy.in.in  com.github.jeremypw.dogfood-code-flatpak-7.gschema.xml  io.elementary.code.1  io.elementary.code.desktop.in.in  io.elementary.code.gresource.xml  io.elementary.code.gschema.xml  io.elementary.code.plugins.spell.gschema.xml  meson.build
data/styles/: elementary-light.xml
plugins/fuzzy-search/: fuzzy-search-indexer.vala  fuzzy-search.vala
plugins/markdown-actions/: markdown-actions.vala
plugins/word-completion/: meson.build
src/: Application.vala  MainWindow.vala  Utils.vala  meson.build
src/Dialogs/: CloneRepositoryDialog.vala
src/FolderManager/: FileView.vala  FolderItem.vala  ProjectFolderItem.vala
src/Services/: Document.vala  GitManager.vala  MonitoredRepository.vala  PluginManager.vala
src/SymbolPane/: outline.gresource.xml
src/Widgets/: ChooseProjectButton.vala  SourceView.vala  Terminal.vala
